Tue May  1 03:36:50 2001  Akinori MUSHA  <knu@iDaemons.org>

	* sample/irb.rb, lib/irb.rb, lib/irb/*, doc/irb/*: Merge from irb
	0.7.3 and irb-tools 0.7.1.

	* instruby.rb: Install help-message's too.

	* lib/irb/main.rb: This file is not needed anymore.

Thu Apr 26 22:36:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in:  don't use tzname on cygwin 1.3.1+.

	* configure.in: add -mieee/-ieee to CFLAGS on OSF1/Alpha
	  to disable "DIVISION BY ZERO" exception.

Thu Apr 26 22:30:43 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): should preserve value of ruby_errinfo.

Thu Apr 26 10:36:09 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): inifinite sleep should not cause
	  dead lock.

Wed Apr 25 16:40:44 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_flatten_bang): proper recursive detection.

Wed Apr 25 15:36:15 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (yield_under): need not to prohibit at safe leve 4.

Tue Apr 24 16:03:25 2001  Hiroshi Igarashi  <iga@ruby-lang.org>

	* ext/extmk.rb.in: add target `distclean' in Makefile for extlib.
	target `clean' doesn't remove Makefile.

Tue Apr 24 15:57:45 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: (dir_config) do not add the
	specified include directory if already included in $CPPFLAGS.

	* ext/extmk.rb.in, lib/mkmf.rb: (dir_config) return a more useful
	value, [include_dir, lib_dir].

Tue Apr 24 15:35:32 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (set_arg0): wrong predicate when new $0 value is bigger
	  than original space.

Mon Apr 23 14:43:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (id2ref): should use NUM2ULONG()

	* object.c (rb_mod_const_get): check whether name is a class
	  variable name.

	* object.c (rb_mod_const_set): ditto.

	* object.c (rb_mod_const_defined): ditto.

Sun Apr 22 17:44:37 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
